# kops

./: .clang-format  .clang-tidy  .cvsignore  .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.txt  conv  kops
.github/workflows/: ci.yml
data/: .cvsignore
doc/: manual.txt
installer/: README.txt  files.txt  installer.bat  installer.nsi  jflmakev.mak
scripts/: fix-esoteric-encoding.py  prettify.py
src/: Makefile  README.txt  Rules.make  conv.c  draw.c  draw.h  game.c  game.h  gamefunc.c  gamefunc.h  global.h  init.c  init.h  kops.c  load.c  load.h  logo.c  logo.h  menu.c  menu.h  sound.c  sound.h  sound_helpers.c  sound_helpers.h  spr.c  spr.h  timer.c  timer.h  version.h  weapon.c  wport.c  wport.h
src/VisualC/: .cvsignore  KOPS.dsp  KOPS.dsw  conv.dsp  kops.rc  resource.h
src/conv/: conv.c
src/kops-bot/: README.txt
src/kops-bot/planning-agent/: bot-goal-based.kb  level0-script-syntax.txt  script-parser.c
src/kops-bot/reactive-agent/: Makefile  bot-config.h  bot-util.c  bot-util.h  bot-wimpy.kb  cannonfodder.c  cannonfodder.h  compile_kb-parser.bat  kb-init.c  kb-init.h  kb-parser.h  parser-io.h  parser-states.fig  plan.txt  radar.fig  special-action.c  test.kb  util.c  util.h
src/kops-bot/reactive-agent/kb/: kb-parser.c  kb-parser.h  parser-io.c  parser-io.h
src/util/: util.h  utilcore.c  utilcore.h  utilfile.c  utilfile.h  utilfile_sdl_wrapper.h  utilfile_wrapper.h  utilpic.h
